ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: netflix-gpt11.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: netflix-app-working
            port:
              number: 80
